--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -12,18 +12,18 @@
   <% end %>
 
   <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.label :nom_de_scène, style: "display: block" %>
+    <%= form.text_field :nom_de_scène %>
   </div>
 
   <div>
-    <%= form.label :domain, style: "display: block" %>
-    <%= form.text_field :domain %>
+    <%= form.label :domaine_artistique, style: "display: block" %>
+    <%= form.text_field :domaine_artistique%>
   </div>
 
   <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_area :description %>
+    <%= form.label :biographie_et_réalisations, style: "display: block" %>
+    <%= form.text_area :biographie_et_réalisations %>
   </div>
 
   <div>
