--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing artist</h1>
+<h1>Modifier la page artiste</h1>
 
 <%= render "form", artist: @artist %>
 
 <br>
 
 <div>
-  <%= link_to "Show this artist", @artist %> |
-  <%= link_to "Back to artists", artists_path %>
+  <%= link_to "Voir la page de l'artiste", @artist %> |
+  <%= link_to "Retourner à la page des artistes", artists_path %>
 </div>
