--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New artist</h1>
+<h1>Créer une nouvelle page artiste</h1>
 
 <%= render "form", artist: @artist %>
 
 <br>
 
 <div>
-  <%= link_to "Back to artists", artists_path %>
+  <%= link_to "Retourner à la page artistes", artists_path %>
 </div>
