--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,58 @@
  *= require_tree .
  *= require_self
  */
+
+
+
+ body {
+  background-color: rgb(255, 255, 255);
+  padding-left:  50px;
+  padding-right: 90px;
+  font-family:Arial, Helvetica, sans-serif;
+  line-height: 3 ;
+
+}
+
+p {
+
+  color: rgb(10, 10, 10);
+  font-size: 20px;
+}
+
+
+
+
+title {
+
+  color: #624197;
+  font-size: 30px;
+}
+
+
+h1 {
+  color: rgb(255, 255, 255);
+  background-color: #624197;
+  font-size: 40px;
+  text-align: center
+}
+
+strong {
+  color: #624197;
+}
+
+img.image {
+
+
+  width : 150px; height : 150px;
+  border: none;
+  -webkit-border-radius : 75px;
+  border-radius : 75px;
+}
+
+
+a {
+
+  color: rgb(255, 0, 200);
+
+
+}
